# file_reads

./: ..gitignore.un~  .Cargo.toml.un~  .ReadMe.md.un~  Cargo.toml  Cargo.toml~  ReadMe.md  ReadMe.md~
src/: .main.rs.swp  .main.rs.un~  lib.rs  main.rs  main.rs~
